@@ -6,7 +6,8 @@ Date: 2014-02-20
 Depends:
     R (>= 2.10)
 Imports:
-    jsonlite, plyr
+    jsonlite,
+    plyr
 Author: MongoDB, Inc. (mongo-c-driver) & Markus Schmidberger (mongosoup.de).
     Formerly Gerald Lindsly.
 Maintainer: Markus Schmidberger <markus@mongosoup.de>
